[gd_scene load_steps=14 format=3 uid="uid://dhx5p40jq8mb6"]

[ext_resource type="Script" path="res://objects/refuel_station.gd" id="1_l06q0"]
[ext_resource type="Texture2D" uid="uid://dtcdax8i4qvbp" path="res://art/gogh/house section/houses/lantern_houses/h1_inside.PNG" id="2_ckw6k"]
[ext_resource type="Texture2D" uid="uid://c5cc8vl4264vf" path="res://art/gogh/house section/houses/lantern_houses/h1_lit.PNG" id="3_63dl2"]
[ext_resource type="PackedScene" path="res://interaction/interaction_area.tscn" id="4_uy3ch"]
[ext_resource type="PackedScene" uid="uid://blrifwgh8tbnh" path="res://objects/climb.tscn" id="5_ub11y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nkj0m"]
atlas = ExtResource("2_ckw6k")
region = Rect2(0, 0, 340, 293)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx65h"]
atlas = ExtResource("3_63dl2")
region = Rect2(0, 0, 338, 329)

[sub_resource type="SpriteFrames" id="SpriteFrames_3n7cl"]
animations = [{
"frames": [],
"loop": true,
"name": &"dark",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkj0m")
}],
"loop": true,
"name": &"inside",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx65h")
}],
"loop": true,
"name": &"lit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6e284"]

[sub_resource type="Animation" id="Animation_exu53"]
resource_name = "inside"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"inside"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OutsideHitbox:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8388608]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InsideHitbox:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_elldm"]
resource_name = "lit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"lit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OutsideHitbox:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InsideHitbox:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8388608]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q5v4s"]
_data = {
"inside": SubResource("Animation_exu53"),
"lit": SubResource("Animation_elldm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h707i"]
size = Vector2(93, 20)

[node name="RefuelStation1" type="Node2D"]
script = ExtResource("1_l06q0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3n7cl")
animation = &"inside"

[node name="Enter" type="Node2D" parent="."]

[node name="EnterStationArea" parent="Enter" instance=ExtResource("4_uy3ch")]
position = Vector2(48, -140)
action_name = "enter"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enter/EnterStationArea"]
scale = Vector2(2.32, 2.32)
shape = SubResource("RectangleShape2D_6e284")

[node name="LabelPos" type="Node2D" parent="Enter"]
position = Vector2(75, -152)

[node name="Exit" type="Node2D" parent="."]

[node name="ExitStationArea" parent="Exit" instance=ExtResource("4_uy3ch")]
position = Vector2(22, 25)
action_name = "exit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit/ExitStationArea"]
scale = Vector2(0.666663, 0.666663)
shape = SubResource("RectangleShape2D_6e284")

[node name="LabelPos" type="Node2D" parent="Exit"]
position = Vector2(38, 16)

[node name="OutsideHitbox" type="StaticBody2D" parent="."]
collision_layer = 8388608

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OutsideHitbox"]
polygon = PackedVector2Array(-86, -102, -139, -24, -112, 101, -50, 122, 81, 116, 78, -8, 117, -11, 75, -83, 75, -125, 5, -125, 15, -103)

[node name="InsideHitbox" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InsideHitbox"]
polygon = PackedVector2Array(63, -30, 65, 74, -96, 75, -97, -50, -117, -50, -119, 88, 77, 88, 75, -33)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q5v4s")
}

[node name="ExitPos" type="Node2D" parent="."]
position = Vector2(-44, -166)

[node name="RefillArea" type="Area2D" parent="."]
position = Vector2(-16, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RefillArea"]
scale = Vector2(1.68, 1.68)
shape = SubResource("RectangleShape2D_h707i")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Climb" parent="." instance=ExtResource("5_ub11y")]
position = Vector2(12, -25)

[connection signal="body_entered" from="RefillArea" to="." method="_on_refill_area_body_entered"]
[connection signal="body_exited" from="RefillArea" to="." method="_on_refill_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
